# googleads.danielfrg.com

./: README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md
docs/python/: index.md
