[tool.poetry]
name = "ads-danielfrg-com"
version = "1.0.0"
description = ""
authors = ["Daniel Rodriguez <daniel@danielfrg.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.6"

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[build-system]
requires = [
  "poetry-core>=1",
  "setuptools",
  "wheel"
]
build-backend = "poetry.core.masonry.api"
